--- a/PyTorch-Basics/handson.ipynb
+++ b/PyTorch-Basics/handson.ipynb
@@ -227,6 +227,76 @@
     "print(v@k)\n",
     "print(torch.mm(v,k))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculating grad for y=x*2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 10 : w = 1.998 , loss = 0.000\n",
+      "epoch 20 : w = 2.000 , loss = 0.000\n",
+      "epoch 30 : w = 2.000 , loss = 0.000\n",
+      "epoch 40 : w = 2.000 , loss = 0.000\n",
+      "epoch 50 : w = 2.000 , loss = 0.000\n",
+      "epoch 60 : w = 2.000 , loss = 0.000\n",
+      "epoch 70 : w = 2.000 , loss = 0.000\n",
+      "epoch 80 : w = 2.000 , loss = 0.000\n",
+      "epoch 90 : w = 2.000 , loss = 0.000\n",
+      "epoch 100 : w = 2.000 , loss = 0.000\n",
+      "Prediction after training 110 = 220.000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch \n",
+    "\n",
+    "X=torch.tensor([1,2,3,4,5,6,7,8],dtype=torch.float32)\n",
+    "Y=torch.tensor([2,4,6,8,10,12,14,16],dtype=torch.float32)\n",
+    "\n",
+    "w=torch.tensor(0.0,dtype=torch.float32,requires_grad=True)\n",
+    "\n",
+    "def forward(x):\n",
+    "    return w*x\n",
+    "\n",
+    "def loss(y,y_pred):\n",
+    "    return ((y-y_pred)**2).mean()\n",
+    "\n",
+    "\n",
+    "learning_rate=0.01\n",
+    "n_epochs=100\n",
+    "\n",
+    "for epoch in range(n_epochs):\n",
+    "    y_pred=forward(X)\n",
+    "\n",
+    "    l=loss(Y,y_pred)\n",
+    "\n",
+    "    l.backward()\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        w -= learning_rate * w.grad\n",
+    "\n",
+    "    w.grad.zero_()\n",
+    "    if (epoch+1)%10==0:\n",
+    "        print(f\"epoch {epoch+1} : w = {w.item():.3f} , loss = {l.item():.3f}\")\n",
+    "    \n",
+    "\n",
+    "X_test=11\n",
+    "\n",
+    "print(f'Prediction after training {X_test} = {forward(X_test).item():.3f}')\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
